[project]
name = "lambda-mini"
version = "0.3.0"
description = "Library for rgb-lasersystems lambda mini lasers"
readme = "README.md"
authors = [
    { email = "peter.barrow.93@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "textual>=6.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lambda-mini-gui = "lambda_mini.lambda_mini:main"
